--- a/config - example.json
+++ b/config - example.json
@@ -3,5 +3,6 @@
     "host" : "192.168.1.10",
     "port" : "9332",
     "username" : "admin",
-    "password" : "owOJasniniASNI&&2bb6ds65VAv5s!"
+    "password" : "owOJasniniASNI&&2bb6ds65VAv5s!",
+    "webport" : 3000
 }
