--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "nodestatus",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Web status page for Litecoin/Bitcoin full nodes",
   "main": "server.js",
   "scripts": {
+    "start": "node nodestatus.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bitcoin-core": "^2.0.0",
+    "dotenv": "^8.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "perf_hooks": "0.0.1"
